--- a/example/package.json
+++ b/example/package.json
@@ -7,13 +7,15 @@
     "start": "ts-node index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "Fabrizio Fenoglio",
   "license": "ISC",
   "dependencies": {
     "axios": "^0.21.1",
-    "twirp-ts": "^1.0.0-alpha-1.7"
+    "express": "^4.17.1",
+    "twirp-ts": "^1.1.0"
   },
   "devDependencies": {
+    "@types/express": "^4.17.12",
     "ts-node": "^10.0.0"
   }
 }
