--- a/example/package.json
+++ b/example/package.json
@@ -12,9 +12,10 @@
   "dependencies": {
     "axios": "^0.21.1",
     "express": "^4.17.1",
-    "twirp-ts": "^1.3.0"
+    "twirp-ts": "^1.4.0"
   },
   "devDependencies": {
+    "@protobuf-ts/plugin": "^2.0.0-alpha.26",
     "@types/express": "^4.17.12",
     "ts-node": "^10.0.0"
   }
