--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   },
   "scripts": {
     "test": "jest",
-    "build": "tsc"
+    "build": "tsc",
+    "test:coverage": "jest --coverage"
   },
   "keywords": [
     "Twirp",
@@ -28,6 +29,7 @@
     "@types/jest": "^26.0.23",
     "@types/node": "^15.12.2",
     "@types/supertest": "^2.0.11",
+    "coveralls": "^3.1.0",
     "http-terminator": "^3.0.0",
     "jest": "^27.0.4",
     "supertest": "^6.1.3",
