--- a/example/package.json
+++ b/example/package.json
@@ -12,10 +12,11 @@
   "dependencies": {
     "axios": "^0.21.1",
     "express": "^4.17.1",
-    "twirp-ts": "^1.5.0"
+    "twirp-ts": "^2.0.0-rc-2",
+    "@protobuf-ts/plugin": "^2.0.0-alpha.27",
+    "ts-proto": "^1.81.3"
   },
   "devDependencies": {
-    "@protobuf-ts/plugin": "^2.0.0-alpha.26",
     "@types/express": "^4.17.12",
     "ts-node": "^10.0.0"
   }
