--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "twirp-ts",
-  "version": "1.5.0",
+  "version": "2.0.0-rc-2",
   "description": "Typescript implementation of Twirp protocol specification",
   "main": "build/twirp/index.js",
   "bin": {
@@ -21,11 +21,14 @@
   "author": "Fabrizio Fenoglio",
   "license": "MIT",
   "dependencies": {
-    "ts-poet": "^4.5.0",
-    "ts-proto": "^1.81.1",
-    "ts-proto-descriptors": "^1.3.1"
+    "@protobuf-ts/plugin-framework": "^2.0.0-alpha.27",
+    "dot-object": "^2.1.4",
+    "path-to-regexp": "^6.2.0",
+    "ts-poet": "^4.5.0"
   },
   "devDependencies": {
+    "@protobuf-ts/plugin": "^2.0.0-alpha.27",
+    "@types/dot-object": "^2.1.2",
     "@types/jest": "^26.0.23",
     "@types/node": "^15.12.2",
     "@types/supertest": "^2.0.11",
@@ -33,9 +36,11 @@
     "jest": "^27.0.4",
     "supertest": "^6.1.3",
     "ts-jest": "^27.0.3",
+    "ts-proto": "^1.81.3",
     "typescript": "^4.3.2"
   },
-  "optionalDependencies": {
-    "@protobuf-ts/plugin": "^2.0.0-alpha.26"
+  "peerDependencies": {
+    "@protobuf-ts/plugin": "^2.0.0-alpha.27",
+    "ts-proto": "^1.81.3"
   }
 }
