updated to latest v2.1.0

--- a/example/Makefile
+++ b/example/Makefile
@@ -1,5 +1,5 @@
 
-PROTOC_GEN_TWIRP_BIN="./node_modules/.bin/protoc-gen-twirp_ts"
+PROTOC_GEN_TWIRP_BIN="./../protoc-gen-twirp_ts"
 PROTOC_GEN_PROTOBUF_TS_BIN="./node_modules/.bin/protoc-gen-ts"
 PROTOC_GEN_TS_PROTO_BIN="./node_modules/.bin/protoc-gen-ts_proto"
 
@@ -19,6 +19,7 @@ ts-proto: clean
 	--ts_proto_out=$(OUT_DIR) \
 	--twirp_ts_opt="gateway" \
 	--twirp_ts_opt="ts_proto" \
+	--twirp_ts_opt="index_file"
 	--twirp_ts_out=$(OUT_DIR) \
 	./protos/*.proto
 
@@ -31,6 +32,7 @@ protobuf-ts: clean
 	--ts_opt=generate_dependencies \
 	--ts_out=$(OUT_DIR) \
 	--twirp_ts_opt="gateway" \
+	--twirp_ts_opt="index_file"
 	--twirp_ts_out=$(OUT_DIR) \
 	./protos/*.proto
 
