--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "@protobuf-ts/plugin-framework": "^2.0.0-alpha.27",
     "dot-object": "^2.1.4",
     "path-to-regexp": "^6.2.0",
-    "ts-poet": "^4.5.0"
+    "ts-poet": "^4.5.0",
+    "yaml": "^1.10.2"
   },
   "devDependencies": {
     "@protobuf-ts/plugin": "^2.0.0-alpha.27",
@@ -34,6 +35,7 @@
     "@types/supertest": "^2.0.11",
     "http-terminator": "^3.0.0",
     "jest": "^27.0.4",
+    "openapi-types": "^9.1.0",
     "supertest": "^6.1.3",
     "ts-jest": "^27.0.3",
     "ts-proto": "^1.81.3",
