example to latest v2.2.1

--- a/example/Makefile
+++ b/example/Makefile
@@ -1,5 +1,5 @@
 
-PROTOC_GEN_TWIRP_BIN="./../protoc-gen-twirp_ts"
+PROTOC_GEN_TWIRP_BIN="./node_modules/.bin/protoc-gen-twirp_ts"
 PROTOC_GEN_PROTOBUF_TS_BIN="./node_modules/.bin/protoc-gen-ts"
 PROTOC_GEN_TS_PROTO_BIN="./node_modules/.bin/protoc-gen-ts_proto"
 
@@ -20,6 +20,8 @@ ts-proto: clean
 	--twirp_ts_opt="gateway" \
 	--twirp_ts_opt="ts_proto" \
 	--twirp_ts_opt="index_file" \
+	--twirp_ts_opt="openapi_twirp" \
+    --twirp_ts_opt="openapi_gateway" \
 	--twirp_ts_out=$(OUT_DIR) \
 	./protos/*.proto
 
@@ -33,6 +35,8 @@ protobuf-ts: clean
 	--ts_out=$(OUT_DIR) \
 	--twirp_ts_opt="gateway" \
 	--twirp_ts_opt="index_file" \
+	--twirp_ts_opt="openapi_twirp" \
+    --twirp_ts_opt="openapi_gateway" \
 	--twirp_ts_out=$(OUT_DIR) \
 	./protos/*.proto
 
