--- a/.github/workflows/twirp-ts.yaml
+++ b/.github/workflows/twirp-ts.yaml
@@ -22,6 +22,7 @@ jobs:
           node-version: ${{ matrix.node-version }}
       - run: npm ci
       - run: npm run build --if-present
+      - run: npm run lint
       - run: npm run test:coverage
       - name: Publish to coveralls.io
         uses: coverallsapp/github-action@master
