--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "license": "MIT",
   "dependencies": {
     "@protobuf-ts/plugin-framework": "^2.0.7",
+    "camel-case": "^4.1.2",
     "dot-object": "^2.1.4",
     "path-to-regexp": "^6.2.0",
     "ts-poet": "^4.5.0",
