Enable @bufbuild/protobuf twirp generation

--- a/example/Makefile
+++ b/example/Makefile
@@ -1,6 +1,7 @@
 
 PROTOC_GEN_TWIRP_BIN="../protoc-gen-twirp_ts"
 PROTOC_GEN_PROTOBUF_TS_BIN="./node_modules/.bin/protoc-gen-ts"
+PROTOC_GEN_PROTOBUF_ES_BIN="./node_modules/.bin/protoc-gen-es"
 PROTOC_GEN_TS_PROTO_BIN="./node_modules/.bin/protoc-gen-ts_proto"
 
 OUT_DIR="./generated"
@@ -40,3 +41,13 @@ protobuf-ts: clean
 	--twirp_ts_out=$(OUT_DIR) \
 	./protos/*.proto
 
+protobuf-es: clean
+	protoc \
+	-I ./protos \
+	--plugin=protoc-gen-es=$(PROTOC_GEN_PROTOBUF_ES_BIN) \
+	--plugin=protoc-gen-twirp_ts=$(PROTOC_GEN_TWIRP_BIN) \
+	--es_opt=target=ts \
+	--es_out=$(OUT_DIR) \
+	--twirp_ts_opt="protobuf_es" \
+	--twirp_ts_out=$(OUT_DIR) \
+	./protos/*.proto
