--- a/example/package.json
+++ b/example/package.json
@@ -11,12 +11,14 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.21.2",
+    "@bufbuild/protobuf": "^0.0.7",
     "express": "^4.17.1",
     "twirp-ts": "^2.4.0",
     "@protobuf-ts/plugin": "^2.0.0-alpha.27",
     "ts-proto": "^1.81.3"
   },
   "devDependencies": {
+    "@bufbuild/protoc-gen-es": "^0.0.7",
     "@types/express": "^4.17.12",
     "ts-node": "^10.0.0"
   }
