--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "url": "https://github.com/hopin-team/twirp-ts"
   },
   "scripts": {
+    "prepare": "npm run build",
     "build": "tsc",
     "format": "prettier -w src/**/*.ts",
     "lint": "prettier -c src/**/*.ts",
